对一些bug进行修改